--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,5 +27,8 @@
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
+    <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="AIzaSyCkUp9bjBMNJ94Uac9n_YzZXQHJOVutHAQ"/>
   </application>
 </manifest>
