--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-maps": "^0.31.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-vector-icons": "^9.1.0",
