--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^6.1.3",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "expo": "~45.0.0",
@@ -18,11 +18,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-geolocation-service": "^5.3.0-beta.4",
-    "react-native-maps": "^0.31.1",
-    "react-native-safe-area-context": "^4.3.1",
+    "react-native-maps": "0.30.2",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-location": "~14.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
