--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "expo": "~45.0.0",
+    "expo-location": "~14.2.2",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -20,9 +21,9 @@
     "react-native": "0.68.2",
     "react-native-maps": "0.30.2",
     "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7",
-    "expo-location": "~14.2.2"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
