--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "expo": "~45.0.0",
@@ -21,7 +22,7 @@
     "react-native": "0.68.2",
     "react-native-maps": "0.30.2",
     "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "^3.13.1",
+    "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7"
   },
