--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-dev-client": "~1.0.0",
     "expo-location": "~14.2.2",
