--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myreactnative",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "App.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -13,6 +13,7 @@
     "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.3.1",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-dev-client": "~1.0.0",
@@ -23,10 +24,13 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-date-picker": "^4.2.2",
+    "react-native-gesture-handler": "^2.6.2",
     "react-native-maps": "0.30.2",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7"
   },
