--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-picker/picker": "^2.4.1",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.3.1",
-    "@react-navigation/bottom-tabs": "^6.3.1",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-dev-client": "~1.0.0",
@@ -26,14 +28,23 @@
     "react-native-date-picker": "^4.2.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-maps": "^1.3.2",
-    "react-native-maps-directions": "^1.8.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "husky": "^7.0.4",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1"
   },
-  "private": true
+  "private": true,
+  "lint-staged": {
+    "source/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  }
 }
