--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-size-matters": "^0.4.0",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-snap-carousel": "github:yadigarbz/react-native-snap-carousel#df1ec4da3194eb20ffb797270b971a33b3ae6d72",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
