--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@freakycoder/react-native-helpers": "^2.0.2",
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -22,9 +23,11 @@
     "expo-location": "~14.2.2",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-androw": "0.0.34",
     "react-native-date-picker": "^4.2.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-maps": "^1.3.2",
@@ -35,6 +38,7 @@
     "react-native-size-matters": "^0.4.0",
     "react-native-snap-carousel": "github:yadigarbz/react-native-snap-carousel#df1ec4da3194eb20ffb797270b971a33b3ae6d72",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
     "react-query": "^3.39.2"
