--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@freakycoder/react-native-helpers": "^2.0.2",
+    "@paraboly/react-native-map-card-view": "^0.1.2",
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
