--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "lint-staged": "lint-staged"
     },
     "dependencies": {
+        "@react-native-async-storage/async-storage": "^1.17.10",
         "@react-native-community/datetimepicker": "6.1.2",
         "@react-native-picker/picker": "^2.4.1",
         "@react-navigation/bottom-tabs": "^6.3.1",
