--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "react-native-androw": "0.0.34",
     "react-native-date-picker": "^4.2.2",
     "react-native-gesture-handler": "~2.2.1",
-    "react-native-maps": "^1.3.2",
-    "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
@@ -42,7 +40,8 @@
     "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "react-native-maps": "0.30.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
