--- a/package.json
+++ b/package.json
@@ -32,19 +32,21 @@
     "react-native-androw": "0.0.34",
     "react-native-date-picker": "^4.2.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-maps": "0.30.2",
     "react-native-pager-view": "5.4.15",
     "react-native-paper": "^4.12.4",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-size-matters": "^0.4.0",
+    "react-native-skeleton-content": "^1.0.28",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-user-avatar": "^1.0.8",
     "react-native-tab-view": "^3.3.0",
+    "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
-    "react-query": "^3.39.2",
-    "react-native-maps": "0.30.2"
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
