--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-dev-client": "~1.0.0",
+    "expo-linear-gradient": "~11.3.0",
     "expo-location": "~14.2.2",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
@@ -32,6 +33,7 @@
     "react-native-androw": "0.0.34",
     "react-native-date-picker": "^4.2.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "0.30.2",
     "react-native-pager-view": "5.4.15",
     "react-native-paper": "^4.12.4",
@@ -54,6 +56,9 @@
     "husky": "^7.0.4",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1"
+  },
+  "overrides": {
+    "react-native-reanimated": "2.8.0"
   },
   "private": true,
   "lint-staged": {
