--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@freakycoder/react-native-helpers": "^2.0.2",
+    "@mapbox/polyline": "^1.1.1",
     "@paraboly/react-native-map-card-view": "^0.1.2",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/datetimepicker": "6.1.2",
