--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-pager-view": "5.4.15",
     "react-native-paper": "^4.12.4",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
