--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "expo-location": "~14.2.2",
         "expo-splash-screen": "~0.15.1",
         "expo-status-bar": "~1.3.0",
+        "moment": "^2.29.4",
         "prop-types": "^15.8.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
