--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-dev-client": "~1.0.0",
+    "expo-image-picker": "~13.1.1",
     "expo-location": "~14.2.2",
+    "expo-permissions": "^14.0.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "moment": "^2.29.4",
@@ -55,8 +57,7 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
     "react-query": "^3.39.2",
-    "rn-fetch-blob": "^0.12.0",
-    "expo-image-picker": "~13.1.1"
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
