--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.3.1",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "expo": "~45.0.0",
     "expo-dev-client": "~1.0.0",
     "expo-image-picker": "~13.1.1",
@@ -41,6 +42,7 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-image-picker": "^4.10.1",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-maps": "0.30.2",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pager-view": "5.4.15",
